--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,8 +33,8 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-		
-		
+		classpath:/config/security-context.xml
+		classpath:/config/dao-context.xml
 		</param-value>
   </context-param>
   <context-param>
@@ -44,4 +44,13 @@
   <session-config>
     <session-timeout>20</session-timeout>
   </session-config>
+  <filter>
+    <display-name>springSecurityFilterChain</display-name>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
