--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,10 @@
   		<artifactId>spring-security-taglibs</artifactId>
   		<version>3.1.4.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-orm</artifactId>
+  		<version>4.3.2.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
