--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,10 @@
   		<artifactId>spring-orm</artifactId>
   		<version>4.3.2.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.webflow</groupId>
+  		<artifactId>spring-webflow</artifactId>
+  		<version>2.4.4.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
