--- a/pom.xml
+++ b/pom.xml
@@ -186,5 +186,10 @@
    <artifactId>jackson-databind</artifactId>
    <version>2.6.3</version>
 </dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 </project>
