--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -41,6 +41,10 @@
     <param-name>spring.profiles.active</param-name>
     <param-value>production</param-value>
   </context-param>
+  <context-param>
+    <param-name>spring.profiles.active</param-name>
+    <param-value>production</param-value>
+  </context-param>
   <session-config>
     <session-timeout>20</session-timeout>
   </session-config>
